--- a/css/index.css
+++ b/css/index.css
@@ -53,7 +53,7 @@ body{
   margin-left: 50px;
 }
 .title img{
-  width: 1100px;
+  width: 60%;
   filter: drop-shadow(0 0 1rem rgba(0,0,0, 0.7));
 }
 
@@ -64,14 +64,14 @@ body{
   flex-direction: column;
   align-content: center;
   justify-content: space-evenly;
-  width: 620px;
-  margin-top: 50vh;
+  width: 33%;
+  margin-top: 45vh;
 }
 
 .menu .sub{
-  margin-bottom: 50px;
+  margin-bottom: 3vh;
   background-color: black;
-  height: 120px;
+  height: 12vh;
   border: 10px solid var(--pink);
   position: relative;
 }
@@ -82,7 +82,7 @@ body{
   left: 50%;
   transform: translate(-50%,-50%);
   font-weight: bold;
-  font-size: 60px;
+  font-size: 3rem;
   color: white;
 }
 .menu .sub a:hover{
