--- a/css/items.css
+++ b/css/items.css
@@ -3,15 +3,29 @@
 @import "var.css";
 
 body{
-    width: 100%;
-    height: 100%;
-    background-color: var(--green);
-    overflow: hidden;
+    width: 100vw;
+    height: 120vh;
+    overflow-x: hidden;
 }
+.background img {
+    /* Set rules to fill background */
+    min-height: 100%;
+    min-width: 1024px;
+  
+    /* Set up proportionate scaling */
+    width: 100%;
+    height: auto;
+  
+    /* Set up positioning */
+    position: fixed;
+    top: 0;
+    left: 0;
+  }
 
 .title{
-    padding-top: 5rem;
-    padding-left: 4rem;
+    position: absolute;
+    padding-top: 3rem;
+    padding-left: 2.5rem;
 }
 .title p{
     font-weight: bold;
@@ -20,38 +34,79 @@ body{
 }
 
 .menu__container{
-    margin-top: 7%;
-    margin-bottom: 500px;
-    display: flex;
-    justify-content: space-evenly;
-    max-width: 100%;
-}
-.menu__container a{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    max-width: 30vw;
-    max-height: 30vw;
-    margin: 0 auto;
-    background-color: rgba(0,0,0,0.3);
-    position: relative;
-}
-.menu__container p{
-    font-weight: bold;
-    font-size: 3rem;
-    line-height: 1.2;
-    text-align: center;
-    color: white;
     position: absolute;
     left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
+    transform: translateX(-50%);
+    margin: 0 auto;
+    margin-top: 17vh;
+    width: 95%;
+    display: flex;
+    flex-direction: column;
 }
-.menu__container p:hover{
+.menu{
+    height: 30vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+}
+.img__container{
+    height: 100%;
+    width: 80%;
+    background-color: red;
+    display: flex;
+    align-items: center;
+}
+.menu__warpper{
+    padding: 2%;
+}
+.menu__warpper > p{
+    color: white;
+    font-size: 1.5rem;
+    line-height: 1.2;
+}
+p > a{
     color: var(--pink);
+    font-size: 1.5rem;
+    line-height: 1.2;
 }
-.menu__container > a > img{
+
+
+
+
+.rub__img{
+    width: 100%;
+    height: 100%;
+    background: url(../img/gif/rub.gif) no-repeat center/cover;
     display: block;
-    max-width: 100%;
-    max-height: 100%;
+    position: relative;
+}
+.bite__img{
+    width: 100%;
+    height: 100%;
+    background: url(../img/gif/bite.gif) no-repeat center/cover;
+    display: block;
+    position: relative;
+}
+.pobidon__img{
+    width: 100%;
+    height: 100%;
+    background: url(../img/gif/pobidon.gif) no-repeat center/cover;
+    display: block;
+    position: relative;
+}
+.ballon__img{
+    width: 100%;
+    height: 100%;
+    background: url(../img/gif/ballon.gif) no-repeat center/cover;
+    display: block;
+    position: relative;
+}
+.candle__img{
+    width: 100%;
+    height: 100%;
+    background: url(../img/gif/candle.gif) no-repeat center/cover;
+    display: block;
+    position: relative;
 }
